# zurihac-2024_generic-programming

./: SOP.hs  generic-programming-zurihac2024.cabal
